[package]
name = "daily-ups"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
owo-colors = "4.3.0"
thiserror = "2.0.18"
time = { version = "0.3.49", features = ["formatting", "local-offset"] }

[dev-dependencies]
tempfile = "3.27.0"
